[package]
name = "july-10"
version = "0.1.0"
authors = ["lineville <lineville@vassar.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
figlet-rs = "0.1.4"
itertools = "0.10.5"
